--- a/src/app/compare/compare.component.html
+++ b/src/app/compare/compare.component.html
@@ -33,7 +33,7 @@
                   </mat-icon>
                 </div>
                 <div class="compare-entity-info">
-                  <a routerLink="/player/{{w.id}}/{{p.id}}">{{p.name}}</a>
+                  <a routerLink="/player" [queryParams]="{world: w.id, id: p.id}">{{p.name}}</a>
                 </div>
               </div>
 
@@ -126,7 +126,7 @@
                           </mat-icon>
                         </div>
                         <div class="compare-entity-info">
-                          <a routerLink="/player/{{w.id}}/{{p.id}}">{{p.name}}</a>
+                          <a routerLink="/player" [queryParams]="{world: w.id, id: p.id}">{{p.name}}</a>
                         </div>
                       </div>
 
@@ -203,7 +203,7 @@
                     <tr>
                       <th>Name</th>
                       <td *ngFor="let i of infoData;">
-                        <a routerLink="/player/{{i.world}}/{{i.grep_id}}">{{i.name}} <mat-icon style="opacity: 1; vertical-align: bottom;" class="hidden-xs">launch</mat-icon></a>
+                        <a routerLink="/player" [queryParams]="{world: i.world, id: i.grep_id}">{{i.name}} <mat-icon style="opacity: 1; vertical-align: bottom;" class="hidden-xs">launch</mat-icon></a>
                       </td>
                     </tr>
                     <tr>
@@ -215,7 +215,7 @@
                     <tr>
                       <th>World</th>
                       <td *ngFor="let i of infoData;">
-                        <a *ngIf="i.alliance_id != 0 && i.alliance_name != ''" routerLink="/points/{{i.world}}">{{i.world}} <mat-icon style="opacity: 1; vertical-align: bottom;" class="hidden-xs">launch</mat-icon></a>
+                        <a *ngIf="i.alliance_id != 0 && i.alliance_name != ''" routerLink="/points" [queryParams]="{world: i.world}">{{i.world}} <mat-icon style="opacity: 1; vertical-align: bottom;" class="hidden-xs">launch</mat-icon></a>
                       </td>
                     </tr>
                     <tr>
@@ -265,7 +265,7 @@
                     <tr>
                       <th>World</th>
                       <td *ngFor="let i of infoData;">
-                        <a *ngIf="i.alliance_id != 0 && i.alliance_name != ''" routerLink="/points/{{i.world}}">{{i.world}} <mat-icon style="opacity: 1; vertical-align: bottom;" class="hidden-xs">launch</mat-icon></a>
+                        <a *ngIf="i.alliance_id != 0 && i.alliance_name != ''" routerLink="/points" [queryParams]="{world: i.world}">{{i.world}} <mat-icon style="opacity: 1; vertical-align: bottom;" class="hidden-xs">launch</mat-icon></a>
                       </td>
                     </tr>
                     <tr>
