--- a/src/app/indexer/alliance/alliance.component.html
+++ b/src/app/indexer/alliance/alliance.component.html
@@ -20,7 +20,7 @@
           Index: <span class='world-title'><a class="a-link-dialog" style="color: #334254 !important;" routerLink="/indexer/{{key}}">{{key}}</a></span>
         </span>
         <span class="index-title">
-          World: <span class='world-title gd-secondary' *ngIf="world"><div class="bg-flag flag-inline-title flag-{{world.substr(0,2)}}"></div>&nbsp;<a class="a-link-dialog" style="color: #334254 !important;" routerLink="/points/{{world}}">{{worldName}}&nbsp;({{world}})</a></span>
+          World: <span class='world-title gd-secondary' *ngIf="world"><div class="bg-flag flag-inline-title flag-{{world.substr(0,2)}}"></div>&nbsp;<a class="a-link-dialog" style="color: #334254 !important;" routerLink="/points" [queryParams]="{world: world}">{{worldName}}&nbsp;({{world}})</a></span>
         </span>
         <span class="index-title hidden-xs">
           Members: <span class='world-title gd-secondary'>{{members}}</span>
