--- a/src/app/scoreboard/bb.html
+++ b/src/app/scoreboard/bb.html
@@ -22,60 +22,60 @@
 <!--Player att-->
 <!--suppress XmlDuplicatedId -->
       <pre *ngIf="type=='players_att' || type=='alliances_att'" id="bb_code">[quote]
-[size=12][b][color=#D60101]Daily best attackers[/color] in world [url=https://grepodata.com/points/{{dataBB.world}}]{{dataBB.world}} ({{dataBB.worldName}})[/url][/b][/size]
-<span *ngIf="dataBB.dateInfo.indexOf('today') !== -1">[b]Showing best attackers for {{dataBB.dateInfo}} ({{dataBB.date}})[/b] [[i]Updates are available [url=https://grepodata.com/points/{{dataBB.world}}]here[/url][/i]]</span>
+[size=12][b][color=#D60101]Daily best attackers[/color] in world [url=https://grepodata.com/points?world={{dataBB.world}}]{{dataBB.world}} ({{dataBB.worldName}})[/url][/b][/size]
+<span *ngIf="dataBB.dateInfo.indexOf('today') !== -1">[b]Showing best attackers for {{dataBB.dateInfo}} ({{dataBB.date}})[/b] [[i]Updates are available [url=https://grepodata.com/points?world={{dataBB.world}}]here[/url][/i]]</span>
 <span *ngIf="dataBB.dateInfo.indexOf('today') === -1">[b]Showing the top {{slider}} attackers {{dataBB.dateInfo}}[/b]</span>
 
 [table]
     [**]Rank[||]{{typeDisplay}}[||]Attack points gained on {{dataBB.date}}[/**]<span *ngFor="let data of dataBB.data; let i = index;"><span *ngIf="i < slider">
         <span *ngIf="i==0">[*][size=13][b]{{i+1}}[/b][/size][|][size=12][{{typeBB}}]{{data.n}}[/{{typeBB}}][/size][|][size=12][url=https://grepodata.com/player/{{dataBB.world}}/{{data.i}}]{{data.s | NumberFilter}}[/url][/size][/*]</span><span *ngIf="i>0">[*][b]{{i+1}}[/b][|][{{typeBB}}]{{data.n}}[/{{typeBB}}][|][url=https://grepodata.com/player/{{dataBB.world}}/{{data.i}}]{{data.s | NumberFilter}}[/url][/*]</span></span></span>
     [/table]
-[i]This table was generated on [b]{{generated_at}}[/b]. [url=https://grepodata.com/points/{{dataBB.world}}/{{dataBB.date}}]View on grepodata.com[/url][/i]
+[i]This table was generated on [b]{{generated_at}}[/b]. [url=https://grepodata.com/points?world={{dataBB.world}}&date={{dataBB.date}}]View on grepodata.com[/url][/i]
 
 [/quote]</pre>
 
 <!--Player def-->
 <!--suppress XmlDuplicatedId -->
       <pre *ngIf="type=='players_def' || type=='alliances_def'" id="bb_code">[quote]
-[size=12][b][color=#2980b9]Daily best defenders[/color] in world [url=https://grepodata.com/points/{{dataBB.world}}]{{dataBB.world}} ({{dataBB.worldName}})[/url][/b][/size]
-<span *ngIf="dataBB.dateInfo.indexOf('today') !== -1">[b]Showing best defenders for {{dataBB.dateInfo}} ({{dataBB.date}})[/b] [[i]Updates are available [url=https://grepodata.com/points/{{dataBB.world}}]here[/url][/i]]</span>
+[size=12][b][color=#2980b9]Daily best defenders[/color] in world [url=https://grepodata.com/points?world={{dataBB.world}}]{{dataBB.world}} ({{dataBB.worldName}})[/url][/b][/size]
+<span *ngIf="dataBB.dateInfo.indexOf('today') !== -1">[b]Showing best defenders for {{dataBB.dateInfo}} ({{dataBB.date}})[/b] [[i]Updates are available [url=https://grepodata.com/points?world={{dataBB.world}}]here[/url][/i]]</span>
 <span *ngIf="dataBB.dateInfo.indexOf('today') === -1">[b]Showing the top {{slider}} defenders {{dataBB.dateInfo}}[/b]</span>
 
 [table]
     [**]Rank[||]{{typeDisplay}}[||]Defence points gained on {{dataBB.date}}[/**]<span *ngFor="let data of dataBB.data; let i = index;"><span *ngIf="i < slider">
         <span *ngIf="i==0">[*][size=13][b]{{i+1}}[/b][/size][|][size=12][{{typeBB}}]{{data.n}}[/{{typeBB}}][/size][|][size=12][url=https://grepodata.com/player/{{dataBB.world}}/{{data.i}}]{{data.s | NumberFilter}}[/url][/size][/*]</span><span *ngIf="i>0">[*][b]{{i+1}}[/b][|][{{typeBB}}]{{data.n}}[/{{typeBB}}][|][url=https://grepodata.com/player/{{dataBB.world}}/{{data.i}}]{{data.s | NumberFilter}}[/url][/*]</span></span></span>
     [/table]
-[i]This table was generated on [b]{{generated_at}}[/b]. [url=https://grepodata.com/points/{{dataBB.world}}/{{dataBB.date}}]View on grepodata.com[/url][/i]
+[i]This table was generated on [b]{{generated_at}}[/b]. [url=https://grepodata.com/points?world={{dataBB.world}}&date={{dataBB.date}}]View on grepodata.com[/url][/i]
 
 [/quote]</pre>
 
 <!--Player con-->
 <!--suppress XmlDuplicatedId -->
       <pre *ngIf="type=='players_con' || type=='alliances_con'" id="bb_code">[quote]
-[size=12][b][color=#497949]Daily best conquerors[/color] in world [url=https://grepodata.com/points/{{dataBB.world}}]{{dataBB.world}} ({{dataBB.worldName}})[/url][/b][/size]
-<span *ngIf="dataBB.dateInfo.indexOf('today') !== -1">[b]Showing best conquerors for {{dataBB.dateInfo}} ({{dataBB.date}})[/b] [[i]Updates are available [url=https://grepodata.com/points/{{dataBB.world}}]here[/url][/i]]</span>
+[size=12][b][color=#497949]Daily best conquerors[/color] in world [url=https://grepodata.com/points?world={{dataBB.world}}]{{dataBB.world}} ({{dataBB.worldName}})[/url][/b][/size]
+<span *ngIf="dataBB.dateInfo.indexOf('today') !== -1">[b]Showing best conquerors for {{dataBB.dateInfo}} ({{dataBB.date}})[/b] [[i]Updates are available [url=https://grepodata.com/points?world={{dataBB.world}}]here[/url][/i]]</span>
 <span *ngIf="dataBB.dateInfo.indexOf('today') === -1">[b]Showing the top {{slider}} conquerors {{dataBB.dateInfo}}[/b]</span>
 
 [table]
     [**]Rank[||]{{typeDisplay}}[||]Conquests on {{dataBB.date}}[/**]<span *ngFor="let data of dataBB.data; let i = index;"><span *ngIf="i < slider">
         <span *ngIf="i==0">[*][size=13][b]{{i+1}}[/b][/size][|][size=12][{{typeBB}}]{{data.n}}[/{{typeBB}}][/size][|][size=12][url=https://grepodata.com/player/{{dataBB.world}}/{{data.i}}]{{data.s | NumberFilter}}[/url][/size][/*]</span><span *ngIf="i>0">[*][b]{{i+1}}[/b][|][{{typeBB}}]{{data.n}}[/{{typeBB}}][|][url=https://grepodata.com/player/{{dataBB.world}}/{{data.i}}]{{data.s | NumberFilter}}[/url][/*]</span></span></span>
     [/table]
-[i]This table was generated on [b]{{generated_at}}[/b]. [url=https://grepodata.com/points/{{dataBB.world}}/{{dataBB.date}}]View on grepodata.com[/url][/i]
+[i]This table was generated on [b]{{generated_at}}[/b]. [url=https://grepodata.com/points?world={{dataBB.world}}&date={{dataBB.date}}]View on grepodata.com[/url][/i]
 
 [/quote]</pre>
 
 <!--Player los-->
 <!--suppress XmlDuplicatedId -->
       <pre *ngIf="type=='players_los' || type=='alliances_los'" id="bb_code">[quote]
-[size=12][b][color=#233140]Daily town losses[/color] in world [url=https://grepodata.com/points/{{dataBB.world}}]{{dataBB.world}} ({{dataBB.worldName}})[/url][/b][/size]
-<span *ngIf="dataBB.dateInfo.indexOf('today') !== -1">[b]Showing town losses for {{dataBB.dateInfo}} ({{dataBB.date}})[/b] [[i]Updates are available [url=https://grepodata.com/points/{{dataBB.world}}]here[/url][/i]]</span>
+[size=12][b][color=#233140]Daily town losses[/color] in world [url=https://grepodata.com/points?world={{dataBB.world}}]{{dataBB.world}} ({{dataBB.worldName}})[/url][/b][/size]
+<span *ngIf="dataBB.dateInfo.indexOf('today') !== -1">[b]Showing town losses for {{dataBB.dateInfo}} ({{dataBB.date}})[/b] [[i]Updates are available [url=https://grepodata.com/points?world={{dataBB.world}}]here[/url][/i]]</span>
 <span *ngIf="dataBB.dateInfo.indexOf('today') === -1">[b]Showing the worst {{slider}} losses {{dataBB.dateInfo}}[/b]</span>
 
 [table]
     [**]Rank[||]{{typeDisplay}}[||]Towns lost on {{dataBB.date}}[/**]<span *ngFor="let data of dataBB.data; let i = index;"><span *ngIf="i < slider">
         <span *ngIf="i==0">[*][size=13][b]{{i+1}}[/b][/size][|][size=12][{{typeBB}}]{{data.n}}[/{{typeBB}}][/size][|][size=12][url=https://grepodata.com/player/{{dataBB.world}}/{{data.i}}]{{data.s | NumberFilter}}[/url][/size][/*]</span><span *ngIf="i>0">[*][b]{{i+1}}[/b][|][{{typeBB}}]{{data.n}}[/{{typeBB}}][|][url=https://grepodata.com/player/{{dataBB.world}}/{{data.i}}]{{data.s | NumberFilter}}[/url][/*]</span></span></span>
     [/table]
-[i]This table was generated on [b]{{generated_at}}[/b]. [url=https://grepodata.com/points/{{dataBB.world}}/{{dataBB.date}}]View on grepodata.com[/url][/i]
+[i]This table was generated on [b]{{generated_at}}[/b]. [url=https://grepodata.com/points?world={{dataBB.world}}&date={{dataBB.date}}]View on grepodata.com[/url][/i]
 
 [/quote]</pre>
     </div>
