--- a/src/app/changelog/changelog.component.html
+++ b/src/app/changelog/changelog.component.html
@@ -22,7 +22,18 @@
         <br/>
         <br/>
 
-	      <h4>v4.0.0 17-04-2020 &nbsp; &nbsp; <span class="label label-default">Latest version</span></h4>
+	      <h4>v4.0.1 22-04-2020 &nbsp; &nbsp; <span class="label label-default">Latest version</span></h4>
+	      <p>- Added departure time to incoming attacks in command overview and movement info panel (you can disable this in the settings).</p>
+	      <p>- Added parser for wisdom reports. You can now index wisdom reports from your inbox.</p>
+	      <p>- Added an intel shortcut to the context menu when you click on towns (you can disable this in the settings).</p>
+	      <p>- Various bugfixes</p>
+	      <a href="https://github.com/GrepoDataTools/grepodata-backend/commit/adaa5b0cdbc32ae21786fef1a8d3738920385d62" target="_blank">
+		      <i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
+	      </a>
+
+	      <hr/>
+
+	      <h4>v4.0.0 17-04-2020</h4>
 	      <p>- Users can now create and share notes about specific towns</p>
 	      <p>- BETA: Added unit intelligence to the command overview as an optional enhancement. If you want to try this out, enable it in the script settings.</p>
 	      <a href="https://github.com/GrepoDataTools/grepodata-backend/commit/0d2988e189820bbd07e65e2bce80a12f429bf4a2#diff-efe31ecbd0dfeba267ed288538be83c0" target="_blank">
